# xugu-mcp

./: .env.example  .gitignore  BUILD.md  CLAUDE.md  MANIFEST.in  README.ch.md  README.md  claude_desktop_config.json  claude_desktop_config_http.json  main.py  pyproject.toml
config/: config.example.yaml  config.yaml
scripts/: setup.ps1  setup.sh
src/xugu_mcp/: main.py  setup_installer.py
src/xugu_mcp/utils/: env_check.py
xgcondb/: __init__.py
xgcondb-win/: __init__.py  _pyxgdb.pyd
