[project]
name = "xugu-mcp"
version = "0.2.2"
description = "XuguDB MCP Server with Chat2SQL support - A Model Context Protocol server for XuguDB (虚谷数据库) with full DDL/DML support, multi-LLM provider integration, and natural language to SQL conversion capabilities."
readme = "README.md"
requires-python = ">=3.6,<3.12"
license = { text = "MIT" }
authors = [
    { name = "Leo", email = "prolokair@gmail.com" }
]
maintainers = [
    { name = "Leo", email = "prolokair@gmail.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "xugu",
    "xugudb",
    "虚谷数据库",
    "database",
    "sql",
    "chat2sql",
    "llm",
    "anthropic",
    "claude",
    "openai",
    "database-driver",
    "sql-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.25.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "sqlparse>=0.5.0",
    "loguru>=0.7.0",
    "aiofiles>=24.0.0",
    "psutil>=6.0.0",
    "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/LeoKuPo/xugu-mcp"
Documentation = "https://github.com/LeoKuPo/xugu-mcp/blob/main/README.ch.md"
Repository = "https://github.com/LeoKuPo/xugu-mcp.git"
Issues = "https://github.com/LeoKuPo/xugu-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
]

[project.scripts]
xugu-mcp = "xugu_mcp.main:cli_main"
xugu-mcp-http = "xugu_mcp.http_server:main"
xugu-mcp-setup = "xugu_mcp.setup_installer:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py36"

[tool.black]
line-length = 100
target-version = ["py36", "py37", "py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/xugu_mcp", "xgcondb"]

[tool.hatch.build.targets.wheel.shared-data]
"xgcondb-mac" = "xgcondb-mac"
"xgcondb-linux-64" = "xgcondb-linux-64"
"xgcondb-linux-arm64" = "xgcondb-linux-arm64"
"xgcondb-win" = "xgcondb-win"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/xgcondb",
    "/xgcondb-mac",
    "/xgcondb-linux-64",
    "/xgcondb-linux-arm64",
    "/xgcondb-win",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]

[tool.hatch.build]
include = [
    "xgcondb-mac/*.so",
    "xgcondb-linux-64/*.so",
    "xgcondb-linux-64/libxugusql.so",
    "xgcondb-linux-arm64/*.so",
    "xgcondb-linux-arm64/libxugusql.so",
    "xgcondb-win/*.dll",
    "xgcondb-win/*.pyd",
]

[tool.hatch.envs.default]
installer = "uv"
